--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+ml = [
+    "scikit-learn>=1.3.0",
+]
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
@@ -38,6 +41,7 @@ dev = [
     "bandit>=1.7.0",
     "pre-commit>=3.0.0",
     "matplotlib>=3.7.0",
+    "scikit-learn>=1.3.0",
 ]
 
 [dependency-groups]
