--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "chuk-mcp-dem"
-version = "0.1.0"
+version = "0.2"
 description = "Digital Elevation Model Discovery, Retrieval & Terrain Analysis MCP Server"
 authors = []
 license = { text = "Apache-2.0" }
@@ -8,7 +8,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "mcp>=0.9.1",
-    "chuk-mcp-server>=0.15.1",
+    "chuk-mcp-server>=0.25.1",
     "chuk-artifacts",
     "python-dotenv>=1.1.1",
     "pydantic>=2.0.0",
@@ -23,6 +23,8 @@ dependencies = [
     "Pillow>=9.0.0",
     # Void filling & cubic interpolation
     "scipy>=1.10.0",
+    # Profile chart & map views (ProfileContent, ProfilePoint, MapContent etc.)
+    "chuk-view-schemas>=0.1.4",
 ]
 
 [project.optional-dependencies]
