--- a/fly.toml
+++ b/fly.toml
@@ -1,17 +1,23 @@
-app = "chuk-mcp-dem"
-primary_region = "iad"
+# fly.toml app configuration file generated for chuk-mcp-dem on 2026-02-28T16:26:12Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'chuk-mcp-dem'
+primary_region = 'iad'
 
 [build]
 
 [http_service]
   internal_port = 8003
   force_https = true
-  auto_stop_machines = "stop"
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
 [[vm]]
-  memory = "512mb"
-  cpu_kind = "shared"
+  memory = '512mb'
+  cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 512
